Update CommunauteAgglomeration.java and README.md